Fixes some minor style issues